k8s/base/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
spec:
  ports:
    - port: 8008
      targetPort: 8008
  selector:
    app: synapse
