k8s/base/synapse/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`matrix.k8s.test`)
      services:
        - kind: Service
          name: synapse-service
          port: 8080
